# vulkan-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/glsl/: compile.py
assets/shaders/glsl/shadertoy/: glass_and_metal_heart.frag  glass_and_metal_heart.frag.spv  heart_2d.frag  heart_2d.frag.spv  heart_3d.frag  heart_3d.frag.spv  meon_love.frag  meon_love.frag.spv  shadertoy.frag  shadertoy.frag.spv  shadertoy.vert  shadertoy.vert.spv
assets/shaders/glsl/triangle/: triangle.vert  triangle.vert.spv
examples/gltfskinning/: gltfskinning.rs
examples/shadertoy/: shadertoy.rs
examples/triangle/: triangle.rs
src/: benchmark.rs  camera.rs  command_line_parser.rs  lib.rs  tools.rs  vulkan_debug.rs  vulkan_device.rs  vulkan_example_base.rs  vulkan_frame_buffer.rs  vulkan_initializers.rs  vulkan_surface.rs  vulkan_swap_chain.rs  vulkan_texture.rs  vulkan_ui_overlay.rs
