[package]
name = "vulkan-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2", features = ["linked"] }
ash-window = "0.12.0"
chrono = "0.4.24"
glam = "0.24.0"
log = "0.4.17"
raw-window-handle = "0.5.2"
winit = "0.28.3"
puffin = "0.16.0"
memoffset = "0.9.0"

[[example]]
name = "triangle"
path = "examples/triangle/triangle.rs"
[[example]]
name = "shadertoy"
path = "examples/shadertoy/shadertoy.rs"

